<?xml version="1.0"?>
<package format="2">
  <name>dq_ipp</name>
  <version>0.0.0</version>
  <description>The dq_ipp package</description>
  <maintainer email="dklee@kaist.ac.kr">dklee</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>voxblox_ros</build_depend>
  <build_depend>voxblox</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>voxblox_ros</exec_depend>
  <exec_depend>voxblox</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
